<resources>
    <string name="app_name">Smart Forex</string>
    <string name="splash_screen_text_one">Welcome to</string>
    <string name="splash_screen_text_two">Smart</string>
    <string name="splash_screen_text_three">Forex</string>
    <string name="bills_spalsh_text">With Smart Forex, the users have the convinience of paying for various bills right from the comfort of their mobile phones. Be it decoders, electricity, water, education, rent or any other bills, Smart Forex has you covered.</string>
    <string name="send_money_splash_text">Send and receive money Smart Forex intends to enable its users to send and recieve money locally and internationally. This maybe from a person to person,person to business,person to bank and vice versa right from the comfort of their mobile phones. </string>
    <string name="exchange_splash_text">Smart Forex App comes in with a new feature; the currency exchange feature which gives you the convenience of exchanging currency before sending or receiving money locally or internationally. And you can do all this from the comfort of your mobile phone.</string>
    <string name="start_activity_text">Register</string>
    <string name="start_activity_terms">By submitting you agree to our <b>Terms  of Service</b> and <b>Privacy Policy</b>. <b>Learn More</b></string>
    <string name="national_id">National Id or Passport Number</string>
    <string name="user_name">Name</string>
    <string name="phone_number">Mobile Phone Number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="quick_actions">OR CONTINUE TO QUICK ACTIONS WITHOUT LOGGING IN</string>
    <string name="verification_text">Please enter the 4 digit code sent to 254715555051</string>
    <string name="verification_wait">Please wait while we validate your account</string>
    <string name="verification_contact">Contact SmartForex Team</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Issah Raynold</string>
    <string name="nav_header_subtitle">Kwa Mwango,Kilifi,Kenya</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Home</string>
    <string name="wallet_icon_title">WALLET</string>
    <string name="currency_exchange_icon">CURRENCY EXCHANGE</string>
    <string name="send_money_icon">SEND MONEY</string>
    <string name="paybills_icon">PAY BILLS</string>
    <string name="password_sign_in">Password [ID No. or Passport No.]</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_deposit_funds">Wallet Funding</string>
    <string name="title_activity_check_balance">Check Balance</string>
    <string name="title_activity_pay_bills">Pay Bills</string>
    <string name="title_activity_send_money">SendMoney</string>
    <string name="title_activity_credit_bundles">Credit and Bundles</string>
</resources>
