<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".StartActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/start_activity_text"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/national_id"
                android:inputType="number"
                android:textColorHint="@color/black30"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColorHint="@color/black30"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/submit"
                android:textStyle="bold"
                android:textColor="@color/purewhite" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/start_activity_terms"
                android:textAlignment="center"
                android:textColor="@color/black70"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="@color/black70"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textColor="@color/purewhite" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>