<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purewhite"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:layout_marginTop="40dp"
                android:id="@+id/editTextIDNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/black30"
                android:textSize="15sp"
                android:hint="@string/user_name"
                android:inputType="text" />

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_sign_in"
                android:textColorHint="@color/black30"
                android:textSize="15sp"
                android:inputType="textPassword" />

            <Button
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/buttonSignIn"
                android:textColor="@color/purewhite"
                android:background="@drawable/custom_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:text="@string/sign_in" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>