<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="150dp"
            android:id="@+id/imageViewSplash"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/splash_screen_text_one"
                    android:textAlignment="center"
                    android:textColor="@color/black70"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
               android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/splash_screen_text_two"
                    android:textColor="@color/orange"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/splash_screen_text_three"
                    android:textColor="@color/black70"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black70"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="My Phone. My Wallet" />
        </TableLayout>



    </LinearLayout>

</FrameLayout>