<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purewhite"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:padding="25dp"
            android:id="@+id/tableWallet"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageViewWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/wallet_icon" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView24"
                    android:textColor="@color/black70"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_icon_title" />
            </TableRow>

        </TableLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black30" />

        <TableLayout
            android:id="@+id/tablePayBills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/bills_icon" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black70"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/paybills_icon" />
            </TableRow>

        </TableLayout>


    </LinearLayout>
    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:background="@color/black30" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/xchange_icon" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black70"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/currency_exchange_icon" />
            </TableRow>

        </TableLayout>

        <View
            android:id="@+id/divider6"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black30" />

        <TableLayout
            android:id="@+id/tableSendMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/money_icon" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black70"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:text="@string/send_money_icon" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>