<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".VerificationActivity">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/verification_text"
            android:textAlignment="center"
            android:textColor="@color/black70"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="gravity"
                android:id="@+id/editTextOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="1"
                android:inputType="number" />

            <EditText
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="gravity"
                android:id="@+id/editTextTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="1"
                android:inputType="number" />

            <EditText
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="gravity"
                android:id="@+id/editTextThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="1"
                android:inputType="number" />

            <EditText
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="gravity"
                android:id="@+id/editTextFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="1"
                android:inputType="number" />
        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/verificationProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/verification_wait"
            android:textAlignment="center"
            android:textColor="@color/black70"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="00.36"
            android:textAlignment="gravity"
            android:textColor="@color/black70"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBarVerification"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:progressTint="@color/orange"
            android:textAlignment="center"
            android:theme="@style/MyProgressBar" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <Button
            android:id="@+id/buttonResendSms"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="Resend sms"
            android:textAlignment="center"
            android:textColor="@color/purewhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_contact"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/verification_contact"
            android:textAlignment="center"
            android:textColor="@color/black70"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>